Fix: Homepage alignment

--- a/components/homepage.module.css
+++ b/components/homepage.module.css
@@ -6,7 +6,8 @@
 .rightContainer{
 position: absolute;
 flex: 1;
-min-width: 80%;
+right: 0;
+min-width: 70%;
 height: 100%;
 display: flex;
 flex-direction: column;
@@ -14,17 +15,22 @@ flex-direction: column-reverse;
 background: #0099FF;
 }
 
+.bottom{
+    position: absolute;
+    bottom: 0;
+}
 .centerImg{
     position: absolute;
-    bottom: 12%;
+    bottom: 10%;
     right: 40%;
     width: 40%;
 }
 
 .getStarted{
     position: absolute;
-    left: 30%;
+    left: 20%;
     bottom: 50%;
+    width: 20%;
     cursor: pointer;
 }
 .getStarted:active{
